--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "account-rebrander",
+  "name": "GoddessAlina2D",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
